[gd_scene load_steps=7 format=3 uid="uid://bnmljcfa5k3hn"]

[ext_resource type="Script" path="res://Being/being_battle.gd" id="1_s7a0l"]
[ext_resource type="Script" path="res://Being/being_grid.gd" id="2_jx27l"]
[ext_resource type="Theme" uid="uid://drjhkeuctl881" path="res://UI/battle_ui_theme.tres" id="3_3dtr3"]
[ext_resource type="Script" path="res://UI/being_stats_ui.gd" id="4_5tbgk"]
[ext_resource type="Texture2D" uid="uid://bcjwtdxmp7n8o" path="res://Art/icon.svg" id="5_1yut2"]
[ext_resource type="Script" path="res://UI/being_abilities_ui.gd" id="6_8kycd"]

[node name="Battle" type="Control" node_paths=PackedStringArray("player_grid", "baddie_grid")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_s7a0l")
player_grid = NodePath("Player/Player_Grid")
baddie_grid = NodePath("Baddie/Baddie_Grid")

[node name="Player" type="Control" parent="."]
anchors_preset = 0
offset_left = 75.0
offset_top = 100.0
offset_right = 115.0
offset_bottom = 140.0

[node name="Player_Grid" type="GridContainer" parent="Player"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_jx27l")
can_player_modifiy = true

[node name="Baddie" type="Control" parent="."]
anchors_preset = 0
offset_left = 962.0
offset_top = 102.0
offset_right = 1002.0
offset_bottom = 142.0

[node name="Baddie_Grid" type="GridContainer" parent="Baddie"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_jx27l")

[node name="HUD" type="Control" parent="."]
anchors_preset = 0
offset_left = 475.0
offset_top = 30.0
offset_right = 515.0
offset_bottom = 70.0

[node name="Fight" type="Button" parent="HUD"]
layout_mode = 0
offset_left = 50.0
offset_top = 594.0
offset_right = 300.0
offset_bottom = 644.0
theme = ExtResource("3_3dtr3")
text = "Fight"

[node name="BeingInfo" type="Control" parent="HUD"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_5tbgk")

[node name="Panel" type="Panel" parent="HUD/BeingInfo"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 135.0

[node name="Texture" type="TextureRect" parent="HUD/BeingInfo/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("5_1yut2")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/BeingInfo/Panel"]
layout_mode = 0
offset_left = 92.0
offset_top = 15.0
offset_right = 156.0
offset_bottom = 92.0

[node name="Damage" type="Label" parent="HUD/BeingInfo/Panel/VBoxContainer"]
layout_mode = 2
text = "Damage"

[node name="Speed" type="Label" parent="HUD/BeingInfo/Panel/VBoxContainer"]
layout_mode = 2
text = "Speed"

[node name="Coords" type="Label" parent="HUD/BeingInfo/Panel/VBoxContainer"]
layout_mode = 2
text = "Coords"

[node name="ProgressBar" type="ProgressBar" parent="HUD/BeingInfo/Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 96.0
offset_right = 327.0
offset_bottom = 123.0
max_value = 1.0

[node name="BeingAbilites" type="Control" parent="HUD"]
anchors_preset = 0
offset_left = 54.0
offset_top = 140.0
offset_right = 94.0
offset_bottom = 180.0
script = ExtResource("6_8kycd")

[node name="MainVbox" type="VBoxContainer" parent="HUD/BeingAbilites"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AbilityLabel" type="Label" parent="HUD/BeingAbilites/MainVbox"]
layout_mode = 2
text = "Abilities"

[node name="AbilityUIVbox" type="VBoxContainer" parent="HUD/BeingAbilites/MainVbox"]
layout_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="button_up" from="HUD/Fight" to="." method="_on_fight_button_up"]
